--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Pengfei Guo"
   avatar           : "./images/favicon.png"
   bio              : "2001.01.13"
   location         : "Baoding,China"
