--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Pengfei Guo"
-  avatar           : "favicon.png"
+  avatar           : "cat.jpg"
   bio              : 
   location         : "Baoding,China"
   employer         :
